--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,57 +14,66 @@ jobs:
       id-token: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up QEMU for multi-arch builds
-      uses: docker/setup-qemu-action@v2
+      - name: Set up QEMU for multi-arch builds
+        uses: docker/setup-qemu-action@v2
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to DockerHub
-      uses: docker/login-action@v2
-      with:
-        registry: docker.io
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Build and push multi-arch image with cache
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: false   # Najpierw budujemy i testujemy, dopiero potem push
-        platforms: linux/amd64,linux/arm64
-        tags: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
-        cache-from: type=registry,ref=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
-        cache-to: type=registry,ref=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
-        output: type=docker
+      - name: Build image (no push yet)
+        id: build
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: false
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
+          cache-from: |
+            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
+          cache-to: |
+            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
+          outputs: type=docker
 
-    - name: Scan image for vulnerabilities (Trivy)
-      uses: aquasecurity/trivy-action@master
-      with:
-        image-ref: docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
-        severity: CRITICAL,HIGH
-        format: table
-        exit-code: 1
+      - name: Save image to tar file (for scanning)
+        run: |
+          docker save ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest -o image.tar
 
-    - name: Push image to DockerHub and GHCR
-      if: success()  # Wykonaj push tylko jeśli skan nie wykrył krytycznych ani wysokich CVE
-      uses: docker/build-push-action@v4
-      with:
-        context: .
-        push: true
-        platforms: linux/amd64,linux/arm64
-        tags: |
-          docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
-          ghcr.io/${{ github.repository_owner }}/pogoda-app:latest
-        cache-from: type=registry,ref=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
-        cache-to: type=registry,ref=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
+      - name: Scan image for vulnerabilities (Trivy)
+        uses: aquasecurity/trivy-action@master
+        with:
+          input: image.tar
+          severity: CRITICAL,HIGH
+          format: table
+          exit-code: 1
+
+      - name: Push image to DockerHub and GHCR
+        if: success()
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64,linux/arm64
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
+            ghcr.io/${{ github.repository_owner }}/pogoda-app:latest
+          cache-from: |
+            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
+          cache-to: |
+            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
