--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -43,13 +43,10 @@ jobs:
           context: .
           push: false
           platforms: linux/amd64,linux/arm64
-          tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
-          cache-from: |
-            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
-          cache-to: |
-            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
-          outputs: type=docker
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
+          # Usunięto outputs: type=docker - powodowało błąd
 
       - name: Save image to tar file (for scanning)
         run: |
@@ -73,7 +70,5 @@ jobs:
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
             ghcr.io/${{ github.repository_owner }}/pogoda-app:latest
-          cache-from: |
-            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
-          cache-to: |
-            type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
+          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
+          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest,mode=max
