--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "app.js",
     "author": "Julia",
     "scripts": {
-      "start": "node app.js"
+        "start": "node app.js"
     },
     "dependencies": {
-      "axios": "^1.6.2",
-      "express": "^4.18.2"
+        "axios": "^1.6.2",
+        "cross-spawn": "^7.0.5",
+        "express": "^4.18.2"
     }
-  }
-  
+}
