--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -67,7 +67,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: |
             docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app:latest
-            ghcr.io/${{ github.repository_owner }}/pogoda-app:latest
+            ghcr.io/julka616/pogoda-app:latest
           cache-from: |
             type=registry,ref=docker.io/${{ secrets.DOCKERHUB_USERNAME }}/pogoda-app-cache:latest
           cache-to: |
